Use true background color in GetTabForegroundColor

When an inactive tab is hovered over, GetTabForegroundColor uses either
the active or inactive tab background color rather than the blended
background color. This has GetTabForegroundColor take the true
background color as an argument to fix this.

Bug: 905066
Change-Id: I5e91341ea0012e8c811c60d118a0ae4347716ed6
Reviewed-on: https://chromium-review.googlesource.com/c/1354230
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Collin Baker <collinbaker@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613364}
Former-commit-id: dc8f22dd3cd1b4e6cb4bbc5cd3b362fb0d2b1f1c