chrome/browser/ui/views/tabs/tab_controller.h
@@ -145,9 +145,10 @@ class TabController {
       BrowserNonClientFrameView::ActiveState active_state =
           BrowserNonClientFrameView::kUseCurrent) const = 0;
 
-  // Returns the tab foreground color of the the text based on both the
-  // |tab_state| and the activation state of the window.
-  virtual SkColor GetTabForegroundColor(TabState tab_state) const = 0;
+  // Returns the tab foreground color of the the text based on the |tab_state|,
+  // the activation state of the window, and the current |background_color|.
+  virtual SkColor GetTabForegroundColor(TabState tab_state,
+                                        SkColor background_color) const = 0;
 
   // Returns the resource ID for the image to use as the tab background.
   // |custom_image| is an outparam set to true if either the tab or the frame
